dark mode icon fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1937,7 +1937,7 @@ img:not([src]) {
   justify-content: flex-end;
   padding: 0.4rem;
   position: fixed;
-  bottom: 2.4rem;
+  bottom: 1.6rem;
   right: 1.6rem;
   box-shadow: 0 0px 8px rgba(0, 0, 0, 0.3);
 }
